Final version of 1

--- a/1.TypesAndOperations/Numbers.ipynb
+++ b/1.TypesAndOperations/Numbers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> 1. Run the next 2 cells and see if something blows up: </h3>"
+    "<h3> Numbers </h3>"
    ]
   },
   {
@@ -13,11 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"I will now count my chickens:\")\n",
-    "print(\"Hens\", 25 + 30 / 6)\n",
-    "print(\"Roosters\", 100 - 25 * 3 % 4)\n",
-    "print(\"Now I will count the eggs:\")\n",
-    "print(3 + 2 + 1 - 5 + 4 % 2 - 1 / 4 + 6)"
+    "print(\"~~~~~~~~\")\n",
+    "print(2 + 3)\n",
+    "print(2.0 + 3.0)\n",
+    "print(\"~~~~~~~~\")\n",
+    "print(2*3)\n",
+    "print(2**3)\n",
+    "print(\"~~~~~~~~\")\n",
+    "print(10/4)\n",
+    "print(10%4)"
    ]
   },
   {
@@ -26,17 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Is it true that 3 + 2 < 5 - 7?\")\n",
-    "print(3 + 2 < 5 - 7)\n",
-    "print(\"What is 3 + 2?\", 3 + 2)\n",
-    "print(\"What is 5 - 7?\", 5 - 7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3> 2. And some hardcore math stuff </h3>"
+    "import random\n",
+    "print(random.randint(1, 10))\n",
+    "print(random.randrange(1, 10, 2))\n"
    ]
   },
   {
@@ -47,14 +43,15 @@
    "source": [
     "import math\n",
     "print(math.pi)\n",
-    "print(math.sqrt(85))"
+    "print(math.sqrt(9))\n",
+    "print(math.pow(5, 8))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> 3. And some hardcore random stuff(totally random, I promise) </h3>"
+    "<h3> Strings </h3>"
    ]
   },
   {
@@ -63,9 +60,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "print(random.random())\n",
-    "print(random.choice([1, 2, 3, 4]))"
+    "a = 'Vichka'\n",
+    "b = 'Venci'\n",
+    "print(a[0])\n",
+    "print(a[1])\n",
+    "print(a[-1])\n",
+    "print(a[0]+a[1]+a[2])\n",
+    "print('Vichka, bring me some water!')\n",
+    "print('Vichka'*5)\n",
+    "print('Vichka' + ' has a kotka!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('{0} bring me some water! {1} bring me some cookies!'.format(a, b))\n",
+    "print(f'{a} bring me some water! {b} bring me some cookies!')\n",
+    "print('%s bring me some water! %s bring me some cookies!' %(a, b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>  Slicing </h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '123456789'\n",
+    "print(a[1:4])\n",
+    "print(a[::2])\n",
+    "print(a[1::2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Getting Help </h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(type) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(int)"
    ]
   }
  ],
