--- a/1.TypesAndOperations/Rosemary.ipynb
+++ b/1.TypesAndOperations/Rosemary.ipynb
@@ -77,11 +77,7 @@
       "metadata": {
         "id": "K_VlHLJZZiyg",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "8ef2f155-47b0-438d-e8f4-bfa23322ddce"
+        "colab": {}
       },
       "source": [
         "abbreviations = 'dmg Scag ua XgE'\n",
@@ -89,16 +85,8 @@
         "\n",
         "print('All uppercase: {}'.format(abbreviations)) # All uppercase: DMG SCAG UA XGE"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "All uppercase: dmg Scag ua XgE\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -115,11 +103,7 @@
       "metadata": {
         "id": "xFTfGR7ZbV3T",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "7fcc3f0a-b1fb-48d4-a604-64b522f004d4"
+        "colab": {}
       },
       "source": [
         "sentence = 'H* l*d th*m, th*n th*y y*ll*d r*d!'\n",
@@ -127,16 +111,8 @@
         "\n",
         "print(sentence) # He led them, then they yelled red! "
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "He led them when they yelled red!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
