--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -29,13 +29,11 @@
       "metadata": {
         "id": "8G6mKoBNae3f",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        },
-        "outputId": "6195d8ca-b143-441f-bf84-53566909a47a"
+        "colab": {},
+        "cellView": "form"
       },
       "source": [
+        "#@title Very secret test\n",
         "import unittest\n",
         "\n",
         "class TestDemo(unittest.TestCase):\n",
@@ -46,32 +44,8 @@
         "\n",
         "unittest.main(argv=['first-arg-is-ignored'], exit=False)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            ".\n",
-            "----------------------------------------------------------------------\n",
-            "Ran 1 test in 0.003s\n",
-            "\n",
-            "OK\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<unittest.main.TestProgram at 0x7fdcff763f60>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
