--- a/2.Collections/Spirulina.ipynb
+++ b/2.Collections/Spirulina.ipynb
@@ -242,8 +242,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Dictionaries\n",
-        "## Basic operations"
+        "# Dictionaries"
       ]
     },
     {
@@ -263,6 +262,73 @@
         "print('Eddie\\'s last name is ' + artist_names['Eddie'])\n",
         "print('~~~~~~~~~~')\n",
         "print(artist_names['Ventsi']) # Uh-oh"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lMnYTW6WiI-o",
+        "colab_type": "text"
+      },
+      "source": [
+        "This works, though (get does not result in an error if the **key** is not present):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VkofJlkXiOMI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(artist_names.get('Ventsi'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MvCVfHgPidmn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "artist_names = {\n",
+        "    'Eddie': 'Vedder',\n",
+        "    'Maynard': 'Keenan',\n",
+        "    'Matthew': 'Bellamy',\n",
+        "    'James': 'LaBrie', \n",
+        "}\n",
+        "artist_names['Ventsi'] = 'Kolev' # Best contemporary duduk player\n",
+        "del artist_names['James']\n",
+        "print(artist_names)\n",
+        "\n",
+        "\n",
+        "print('~~~~~~~~~~')\n",
+        "artist_names['Eddie'] = 'Van Halen'\n",
+        "print(artist_names)\n",
+        "artist_names['Matthew'] = [1,2,3] # Yes, it makes no sense\n",
+        "artist_names[6] = 'Bellamy'\n",
+        "print(artist_names)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mpe-61CtjUR_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Let's not forget spirulina\n",
+        "food_guidelines = {'Dog Food': 'Spirulina', 'Cake': 'Спирулина', 'Amount of spirulina': 3, 5: 'five'}\n",
+        "food_guidelines[[1,2,3]] = 'Uh-oh'\n"
       ],
       "execution_count": 0,
       "outputs": []
