--- a/2.Collections/Spirulina.ipynb
+++ b/2.Collections/Spirulina.ipynb
@@ -6,6 +6,7 @@
       "name": "Spirulina.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,11 +79,38 @@
         "print(my_cool_list)\n",
         "print('My list is {0} items long'.format(len(my_cool_list)))\n",
         "print(my_cool_list[1])\n",
-        "print(my_cool_list[-1])\n",
-        "\n",
-        "print('~~~~~~~~~~')\n",
+        "print(my_cool_list[-1])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "365GhOd_mxm2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_cool_list = ['Spirulina, of course', 666, [1,2,3], 'another string', 1.618]\n",
         "print('Before: {0}'.format(my_cool_list))\n",
         "print('Popped item: {0}'.format(my_cool_list.pop())) # Remove an item from the list\n",
+        "print('After: {0}'.format(my_cool_list))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uwf-T4dgm_2A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_cool_list = ['Spirulina, of course', 666, [1,2,3], 'another string', 1.618]\n",
+        "print('Before: {0}'.format(my_cool_list))\n",
+        "my_cool_list.insert(2, 'Jack Sparrow')) # Remove an item from the list\n",
         "print('After: {0}'.format(my_cool_list))"
       ],
       "execution_count": 0,
@@ -328,7 +356,33 @@
       "source": [
         "# Let's not forget spirulina\n",
         "food_guidelines = {'Dog Food': 'Spirulina', 'Cake': 'Спирулина', 'Amount of spirulina': 3, 5: 'five'}\n",
-        "food_guidelines[[1,2,3]] = 'Uh-oh'\n"
+        "food_guidelines[[1,2,3]] = 'Uh-oh'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zrxtDfJznSgf",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Keys, values, items"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ge_5DyQCnT__",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "food_guidelines = {'Dog Food': 'Spirulina', 'Cake': 'Спирулина', 'Amount of spirulina': 3, 5: 'five'}\n",
+        "print(food_guidelines.keys())\n",
+        "print(food_guidelines.values())\n",
+        "print(food_guidelines.items())"
       ],
       "execution_count": 0,
       "outputs": []
