Fix some mistakes found during the lecture

--- a/2.Collections/Spirulina.ipynb
+++ b/2.Collections/Spirulina.ipynb
@@ -30,8 +30,8 @@
       "metadata": {
         "id": "0-_ueN1kYrlJ",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "form"
+        "cellView": "form",
+        "colab": {}
       },
       "source": [
         "#@title Setup, execute once.\n",
@@ -110,7 +110,7 @@
       "source": [
         "my_cool_list = ['Spirulina, of course', 666, [1,2,3], 'another string', 1.618]\n",
         "print('Before: {0}'.format(my_cool_list))\n",
-        "my_cool_list.insert(2, 'Jack Sparrow')) # Remove an item from the list\n",
+        "my_cool_list.insert(2, 'Jack Sparrow') # Add an item to the list\n",
         "print('After: {0}'.format(my_cool_list))"
       ],
       "execution_count": 0,
@@ -166,7 +166,10 @@
       },
       "source": [
         "my_cool_list = ['Spirulina, of course', 666, [1,2,3], 'another string', 1.618]\n",
-        "# I don't want you to blow your mind on your own, so no spoilers here"
+        "my_cool_list.append(my_cool_list)\n",
+        "print(my_cool_list)\n",
+        "print(my_cool_list[-1])\n",
+        "print(my_cool_list[-1][-1][-1][-1][-1][5])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -222,7 +225,7 @@
       "source": [
         "my_cool_tuple = ('Spirulina, of course', 666, [1,2,3], 'another string', 1.618)\n",
         "print('Before {0}'.format(my_cool_tuple))\n",
-        "# Enter code here\n",
+        "my_cool_tuple[2][1] = 'Hello World'\n",
         "print('After {0}'.format(my_cool_tuple))"
       ],
       "execution_count": 0,
