--- a/1.TypesAndOperations/Rosemary.ipynb
+++ b/1.TypesAndOperations/Rosemary.ipynb
@@ -54,7 +54,10 @@
       "source": [
         "a = 5\n",
         "b = 10\n",
+        "\n",
         "# Your code\n",
+        "a, b = b, a\n",
+        "# End\n",
         "\n",
         "print(a) # 10\n",
         "print(b) # 5"
@@ -81,7 +84,10 @@
       },
       "source": [
         "abbreviations = 'dmg Scag ua XgE'\n",
+        "\n",
         "# Your code\n",
+        "abbreviations = abbreviations.upper()\n",
+        "# End\n",
         "\n",
         "print('All uppercase: {}'.format(abbreviations)) # All uppercase: DMG SCAG UA XGE"
       ],
@@ -107,7 +113,10 @@
       },
       "source": [
         "sentence = 'H* l*d th*m, th*n th*y y*ll*d r*d!'\n",
+        "\n",
         "# Your code\n",
+        "sentence = sentence.replace('*', 'e')\n",
+        "# End\n",
         "\n",
         "print(sentence) # He led them, then they yelled red! "
       ],
