Fix errors in tasks

--- a/2.Collections/Honey.ipynb
+++ b/2.Collections/Honey.ipynb
@@ -94,8 +94,8 @@
       "metadata": {
         "id": "4KwDdjJqrzxc",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "code"
+        "cellView": "code",
+        "colab": {}
       },
       "source": [
         "variable_name = 0\n",
@@ -180,8 +180,8 @@
         "colab": {}
       },
       "source": [
-        "characters = death_count.keys()\n",
-        "#print(death_count[keys[3]])"
+        "characters = list(death_count.keys())\n",
+        "#print(characters[3])"
       ],
       "execution_count": 0,
       "outputs": []
