--- a/3.Statements & Syntax/Steak.ipynb
+++ b/3.Statements & Syntax/Steak.ipynb
@@ -43,10 +43,10 @@
         "colab": {}
       },
       "source": [
-        "tuple = spam, ham = 'yum', 'YUM'\n",
-        "list = [spam, ham] = ['yum', 'YUM']\n",
-        "print(tuple)\n",
-        "print(list) "
+        "test_tuple = spam, ham = 'yum', 'YUM'\n",
+        "test_list = [spam, ham] = ['yum', 'YUM']\n",
+        "print(test_tuple)\n",
+        "print(test_list) "
       ],
       "execution_count": 0,
       "outputs": []
@@ -202,7 +202,20 @@
       },
       "source": [
         "for i in range(5, 25, 3):\n",
-        "    print(i)"
+        "    print(i)\n",
+        "\n",
+        "print('*'*30)\n",
+        "\n",
+        "for index, value in enumerate(['a', 'b', 'c', 'd']):\n",
+        "    print(index, value)\n",
+        "    \n",
+        "print('*'*30)\n",
+        "\n",
+        "superheroes = ['Batman', 'Spiderman', 'Vichka']\n",
+        "studios = ['DC', 'Marvel', 'CPD&P Productions']\n",
+        "\n",
+        "for superhero, studio in zip(superheroes, studios):\n",
+        "    print(f'{superhero} is from {studio}!')"
       ],
       "execution_count": 0,
       "outputs": []
