--- a/3.Statements & Syntax/Sausage.ipynb
+++ b/3.Statements & Syntax/Sausage.ipynb
@@ -125,16 +125,14 @@
       },
       "source": [
         "<h1> Задача 4 </h1>\n",
-        "Напишете програма, която проверява валидността на няколко дадени пароли по следните правила:\n",
+        "Напишете програма, която проверява валидността на дадена парола, по следните правила:\n",
         "\n",
         "\n",
         "*   поне една буква между [a-z] и [A-Z]\n",
         "*   поне една цифра между [0-9]\n",
         "*   поне един специален символ измежду !, @, $, %\n",
         "*   минимална дължина 6 символа, максимална 16 символа\n",
-        "*   без други символи освен изредените по-горе\n",
-        "\n",
-        "/* Запазвам си правото да допиша още пароли след като намерите начин да чийтнете */"
+        "*   без други символи освен изредените по-горе"
       ]
     },
     {
@@ -145,9 +143,7 @@
         "colab": {}
       },
       "source": [
-        "password1 = \"A006752@@!sa\" # True\n",
-        "password2 = \"asdASDfxc213\" # False\n",
-        "password3 = \"1A########################################\" # False"
+        "password = input()"
       ],
       "execution_count": 0,
       "outputs": []
