--- a/3.Statements & Syntax/Sausage.ipynb
+++ b/3.Statements & Syntax/Sausage.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "<h1> Задача 1 </h1>\n",
-        "Напишете програма, която обръща следното изречение на обратно \"Горчива обич нека ме опива. От старите винари още знам, че истинското вино е горчиво. За подсладено няма да те дам!\""
+        "Напишете програма, която да проверява дали подаден стринг е палиндром."
       ]
     },
     {
@@ -43,7 +43,7 @@
         "colab": {}
       },
       "source": [
-        "a = \"Горчива обич нека ме опива. От старите винари още знам, че истинското вино е горчиво. За подсладено няма да те дам!\""
+        "palindrom_maybe = input()"
       ],
       "execution_count": 0,
       "outputs": []
