--- a/6. More functions/Burrito.ipynb
+++ b/6. More functions/Burrito.ipynb
@@ -41,11 +41,86 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "v3pBVJRtb2sy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Имате списък от списъци в следния вид:\n",
+        "\n",
+        "```\n",
+        "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
+        "\t       [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
+        "           [\"77226\", \"Head First Python, Paul Barry\", 3,32.95],\n",
+        "           [\"88112\", \"Einführung in Python3, Bernd Klein\", \t3, 24.99]]\n",
+        "```\n",
+        "\n",
+        "Всеки списък е нареден по следния начин от ляво на дясно:\n",
+        "\n",
+        "\n",
+        "0.   Номер на поръчка\n",
+        "1.   Име на книга\n",
+        "2.   Количество\n",
+        "3.   Цена на една бройка\n",
+        "\n",
+        "Искаме да обработим този списък и като резултат да получим структура от вида:\n",
+        "\n",
+        "\n",
+        "```\n",
+        "[(номер на артикул 1, количество*цена за артикул 1), (номер на артикул 2, количество*цена за артикул 2) ]\n",
+        "```\n",
+        "\n",
+        "Давам ви цял един ред да решите задачата!\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JkUZjV-3dHX7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
+        "           [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
+        "           [\"77226\", \"Head First Python, Paul Barry\", 3, 32.95],\n",
+        "           [\"88112\", \"Einführung in Python3, Bernd Klein\", 3, 24.99]]\n",
+        "invoice = 'Replace me with code'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TF5gdGyFdXqV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#@title Test yourself { display-mode: \"form\" }\n",
+        "class TestShoppingList(unittest.TestCase):\n",
+        "    \n",
+        "    \n",
+        "    def test_the_result(self):\n",
+        "        self.assertEqual(invoice, [('34587', 163.8), ('98762', 284.0), ('77226', 98.85000000000001), ('88112', 74.97)])\n",
+        "\n",
+        "unittest.main(argv=['first-arg-is-ignored', 'TestShoppingList'], exit=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "nd9I-mgzmjxi",
         "colab_type": "text"
       },
       "source": [
-        "<h4> 1. Memoization </h4>\n",
+        "<h4> Memoization </h4>\n",
         "Да накодим мемоизация... Ъъ, а какво е мемоизация?... Накратко начин да запазваме резултат от функция, без да трябва да минаваме през всички \"тежки\" изчисления отново. Например:\n",
         "\n",
         "\n",
@@ -57,13 +132,12 @@
         "\n",
         "\n",
         "Ако извикам 1 път addition с аргументи(5, 6) трябва да извърша операцията + във функцията и да получа 11.\n",
-        "Ако извикам отново addition с аргументи(5, 6) трябва да получа веднага 11 без да минавам през \"тежката\" операция.\n",
+        "Ако извикам отново addition с аргументи(5, 6) трябва да получа веднага 11 без да минавам през \"тежката\" операция.(в нашия случай просто да изпринтим нещо за да сигнализираме, че не сме изпълнили тежката операция)\n",
         "\n",
         "Функции, за които мемоизацията трябва да работи:\n",
         "\n",
         "*  addition(a, b) -> събира 2 числа\n",
         "*  toUpper(word) -> получава стринг и връща същия стринг, но всички букви в него са главни\n",
-        "*  reverse(word) -> получава стринг и го обръща на обратно\n",
         "\n",
         "Допълнителни условия: Нямаме право да бъркаме в тялото на функциите.\n",
         "\n"
@@ -77,14 +151,23 @@
         "colab": {}
       },
       "source": [
+        "def memoization(func):\n",
+        "    pass\n",
+        "\n",
+        "@memoization\n",
         "def addition(a, b):\n",
         "    return a+b\n",
         "\n",
+        "@memoization\n",
         "def toUpper(word):\n",
         "    return word.upper()\n",
         "\n",
-        "def reverse:\n",
-        "    return word[::-1]"
+        "\n",
+        "print(addition(1,3))\n",
+        "print(addition(1,3))\n",
+        "\n",
+        "print(toUpper('test'))\n",
+        "print(toUpper('test'))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -96,8 +179,8 @@
         "colab_type": "text"
       },
       "source": [
-        "<h3> 2. Fibonacci generator </h3>\n",
-        "Напишете генератор за фибоначи числа, който при всяко извикване дава следващото число във веригата.\n",
+        "<h3> Fibonacci generator </h3>\n",
+        "Напишете генератор за фибоначи числа, който при всяко извикване дава следващото число във веригата до безкрай.\n",
         "Част от веригата: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377,....]"
       ]
     },
@@ -110,10 +193,6 @@
       },
       "source": [
         "def fibonacci():\n",
-        "    \"\"\" Generator yielding Fibonacci numbers\n",
-        "    \n",
-        "    :returns: int -- Fibonacci number as an integer\n",
-        "    \"\"\"\n",
         "    pass"
       ],
       "execution_count": 0,
@@ -124,11 +203,7 @@
       "metadata": {
         "id": "WuvPWR_vwSvp",
         "colab_type": "code",
-        "outputId": "d3066b65-476e-43ed-9f33-18ae0eb27218",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        }
+        "colab": {}
       },
       "source": [
         "#@title Test yourself { display-mode: \"form\" }\n",
@@ -143,32 +218,8 @@
         "\n",
         "unittest.main(argv=['first-arg-is-ignored', 'TestFibo'], exit=False)"
       ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            ".\n",
-            "----------------------------------------------------------------------\n",
-            "Ran 1 test in 0.001s\n",
-            "\n",
-            "OK\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<unittest.main.TestProgram at 0x7f1fea0f16a0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
