--- a/6. More functions/Tacos.ipynb
+++ b/6. More functions/Tacos.ipynb
@@ -27,43 +27,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IMdgBZSA3ree",
-        "colab_type": "text"
-      },
-      "source": [
-        "<h3> Functions are FCC!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "llrDw2RY3gSt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from datetime import datetime\n",
-        "\n",
-        "def not_during_the_night(func):\n",
-        "    def wrapper():\n",
-        "        if 7 <= datetime.now().hour < 22:\n",
-        "            func()\n",
-        "        else:\n",
-        "            print(\"Hush, the neighbors are asleep\")\n",
-        "    return wrapper\n",
-        "\n",
-        "def say_whee():\n",
-        "    print(\"Whee!\")\n",
-        "\n",
-        "say_whee = not_during_the_night(say_whee)\n",
-        "say_whee()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "3UCiZ3UZ5dCN",
         "colab_type": "text"
       },
@@ -86,6 +49,20 @@
         "print(list(map(lambda x : x['points']*10,  dict_a)))\n",
         "\n",
         "print(list(map(lambda x : x['name'] == \"python\", dict_a)))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F10PR6H4aS6K",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "result = map(lambda x:int(x), input().split())\n",
+        "print(list(result))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -170,6 +147,36 @@
       "source": [
         "<h3> Decorators </h3>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "llrDw2RY3gSt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "def not_during_the_night(func):\n",
+        "    def wrapper():\n",
+        "        if 7 <= datetime.now().hour < 22:\n",
+        "            func()\n",
+        "        else:\n",
+        "            shut_up()\n",
+        "    return wrapper\n",
+        "\n",
+        "def say_whee():\n",
+        "    print(\"Whee!\")\n",
+        "\n",
+        "def shut_up():\n",
+        "    print(\"Hush, the neighbors are asleep!\")\n",
+        "\n",
+        "say_whee = not_during_the_night(say_whee)\n",
+        "say_whee()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
