--- a/6. More functions/Tacos.ipynb
+++ b/6. More functions/Tacos.ipynb
@@ -84,6 +84,21 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZTEReEZTlSS5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def factorial(n):\n",
+        "    return 1 if n < 2 else n * factorial(n-1)\n",
+        "print(list(map(factorial, filter(lambda n: n % 2, range(20)))))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "2VUUVQt3ETVF",
@@ -134,6 +149,42 @@
         "print(next(generator))\n",
         "print(next(generator))\n",
         "print(next(generator))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NJermQoVnk4J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Този пример е тук само за да докарам главоболие на Вичката\n",
+        "from collections import Iterable\n",
+        "\n",
+        "def flatten(items, ignore_types=(str, bytes)):\n",
+        "    for x in items:\n",
+        "        if isinstance(x, Iterable) and not isinstance(x, ignore_types):\n",
+        "            yield from flatten(x)\n",
+        "        else:\n",
+        "            yield x\n",
+        "\n",
+        "items1 = [1, 2, [3, 4, [5, 6], 7], 8]\n",
+        "items2 = [1, 2, ['TESt', ['hehe', 'hoho']]]\n",
+        "\n",
+        "flat_list = []\n",
+        "for x in flatten(items1):\n",
+        "    flat_list.append(x)\n",
+        "print(flat_list)\n",
+        "\n",
+        "print('*'*30)\n",
+        "\n",
+        "flat_list = []\n",
+        "for x in flatten(items2):\n",
+        "    flat_list.append(x)\n",
+        "print(flat_list)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -230,6 +281,61 @@
         "\treturn a + b\n",
         "\n",
         "print(adder(2,3))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WaznQA5trsBw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def make_averager():\n",
+        "    series = []\n",
+        "    def averager(new_value):\n",
+        "        series.append(new_value)\n",
+        "        total = sum(series)\n",
+        "        return total/len(series)\n",
+        "    return averager\n",
+        "\n",
+        "avg = make_averager()\n",
+        "\n",
+        "print(avg(5))\n",
+        "print(avg(10))\n",
+        "print(avg(20))\n",
+        "print(avg(50))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bH4pB87Vsq6X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def make_averager():\n",
+        "    count = 0\n",
+        "    total = 0\n",
+        "    def averager(new_value):\n",
+        "        #nonlocal count\n",
+        "        #nonlocal total\n",
+        "        count += 1\n",
+        "        total += new_value\n",
+        "        return total / count\n",
+        "    return averager\n",
+        "\n",
+        "avg2 = make_averager()\n",
+        "\n",
+        "print(avg2(5))\n",
+        "print(avg2(10))\n",
+        "print(avg2(20))\n",
+        "print(avg2(50))"
       ],
       "execution_count": 0,
       "outputs": []
