Remove some output

--- a/8. OOP/TraditionalCatalunianSardines.ipynb
+++ b/8. OOP/TraditionalCatalunianSardines.ipynb
@@ -39,11 +39,7 @@
       "metadata": {
         "id": "qNIcv8cCor5Q",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 101
-        },
-        "outputId": "62992486-33a6-4792-84ee-33577b7cac88"
+        "colab": {}
       },
       "source": [
         "class Vehicle:\n",
@@ -73,20 +69,8 @@
         "print(car.use_hanbrake()) # hrrrrrrrr\n",
         "print(car.use_blinker()) # tsi tsu tsi tsu"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Empty plate\n",
-            "Empty plate\n",
-            "tsi tsu tsi tsu\n",
-            "hrrrrrrrr\n",
-            "tsi tsu tsi tsu\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
